--- a/css/Dudas.css
+++ b/css/Dudas.css
@@ -61,3 +61,12 @@ body {
     text-align: center;
     border-radius: 5px;
 }
+
+.logo {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 200px;
+    height: 175px;
+    margin-bottom: 20px;
+}
