--- a/css/Pedidos.css
+++ b/css/Pedidos.css
@@ -85,3 +85,13 @@ body {
     border: none;
     border-radius: 5px;
 }
+
+
+.logo {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 250px;
+    height: 200px;
+    margin-bottom: 20px;
+}
