--- a/css/Pedidos.css
+++ b/css/Pedidos.css
@@ -19,6 +19,7 @@ body {
     z-index: 1000;
 }
 .header {
+    position: relative;
     height: 200px;
     display: flex;
     align-items: center;
@@ -29,69 +30,64 @@ body {
     text-shadow: 2px 2px 5px rgba(0,0,0,0.5);
 }
 
-.pedidos-container {
-    background-color: white;
-    padding: 20px;
-    width: 50%;
-    margin: 20px auto;
-    border-radius: 10px;
-    box-shadow: 0px 4px 8px rgba(0,0,0,0.3);
-}
-
-.pedido {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
-    border-bottom: 1px solid #ccc;
-}
-
-
-.btn-solicitar {
-    background-color: #d9534f;
-    color: white;
-    border: none;
-    font-size: 16px;
-    cursor: pointer;
-    border-radius: 5px;
-    margin-top: 15px;
-}
-
-.btn-solicitar:hover {
-    background-color: #c9302c;
-}
-
-
-.btn-volver {
-    display: block;
-    margin-top: 15px;
-    color: white;
-    background-color: #5bc0de;
-    padding: 10px 15px;
-    text-decoration: none;
-    border-radius: 5px;
-}
-
-.btn-volver:hover {
-    background-color: #31b0d5;
-}
-
-
-.input {
-    width: 200px;
-    padding: 5px;
-    font-size: 1em;
-    text-align: center;
-    border: none;
-    border-radius: 5px;
-}
-
-
-.logo {
+.logo{
     position: absolute;
     top: 0;
     right: 0;
     width: 250px;
     height: 200px;
     margin-bottom: 20px;
+}
+main{
+    padding: 20px;
+}
+.pedidos-container{
+    background-color: white;
+    padding: 20px;
+    width: 50%;
+    margin: 20px auto;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+}
+.pedidos-container article{
+    margin-bottom: 20px;
+}
+.pedidos-container article h2{
+    color: #333;
+    font-size: 1.5em;
+    margin-bottom: 10px;
+}
+.pedidos-container p{
+    color: #555;
+    font-size: 1em;
+    line-height: 1.5;
+}
+.pedidos-container ul{
+    list-style: none;
+    padding: 0;
+}
+.pedidos-container ul li{
+    color:#555;
+    font-size: 1em;
+    margin-bottom: 5px;
+}
+.btn-volver{
+    display: inline-block;
+    margin-top: 15px;
+    color:white;
+    background-color: #ff9966;
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 5px;
+    font-size: 1em;
+    transition: background-color 0.3s ease;
+}
+.btn-volver:hover{
+    background-color: #ff8533;
+}
+footer{
+    background-color: #333;
+    color: white;
+    padding: 20px;
+    text-align: center;
 }
